# ia-projet

./: CMakeLists.txt  README.md  build-debug.sh  build.sh  constants.h  hitbox_generator.py  level_generator.py  main.cpp
Assets/Levels/Level0/: level_0_hitbox.json
Assets/Levels/Level1/: level_1_hitbox.json
Assets/Levels/Level2/: level_2_hitbox.json
Assets/Levels/Level3/: level_3_hitbox.json
Events/: event_collisions.h  event_inputs.h
Object/: object.h  scene.h
Object/GameObjects/: anims  camera.h  end_video.h  enemy.h  entity.h  exit.h  gamelevel.h  gameover.h  mainmenu.h  player.h  shadowplayer.h  slidevalue.h  triggerenemy.h  wall.h
Utilities/: utilities_animations.h  utilities_application.h  utilities_astar.h  utilities_audio.h  utilities_debug.h  utilities_math.h  utilities_random.h  utilities_rect.h  utilities_text.h  utilities_time.h
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  toolchain-mingw.cmake
